--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,50 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main class="bg-success p-2 text-white">
+      <div id="carouselExample" class="carousel slide">
+
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="food on table" class="img-fluid">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">CONTACT</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100" alt="chairs" class="img-fluid">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">CONTACT</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100" alt="church" class="img-fluid">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">CONTACT</h2>
+            </div>
+          </div>
+          <div class="carousel-item active">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100" alt="lights" class="img-fluid">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">CONTACT</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100" alt="microphone" class="img-fluid" >
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">CONTACT</h2>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     </main>
     <footer>
