--- a/stats.html
+++ b/stats.html
@@ -29,7 +29,7 @@
             </div>
           </nav>
     </header>
-    <main class="bg-success p-2 text-white">
+    <main class="bg-warning p-2 text-dark bg-opacity-25">
       <div id="carouselExample" class="carousel slide">
 
         <div class="carousel-inner">
@@ -54,7 +54,7 @@
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100" alt="lights" class="img-fluid">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-3 fw-bold">STATS</h2>
+              <h2 class="display-3 fw-bold text-black">STATS</h2>
             </div>
           </div>
           <div class="carousel-item active">
@@ -74,9 +74,30 @@
         </button>
     </div>
 
+
+
     </main>
+
+
+
+
     <footer>
+      <div class="container-fluid bg-black" data-bs-theme="dark">
+        <div class="row justify-content-between p-2">
+          <div class="col-8">
+            <a href="https://web.whatsapp.com/" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="image whatsapp"></a>
+            <a href="https://www.instagram.com/" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/instagram.png" alt="image instagram"></a>
+            <a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/facebook.png" alt="image facebook"></a>
+          </div>
+          <div class="col-2  fw-bold text-light">
+            <p class="mt-3">COHORT 3</p>
+          </div>
+        </div>
+      </div>
+      
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
