--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -30,7 +30,7 @@
       </nav>
 </header>
 
-<main class="bg-success p-2 text-white">
+<main class="bg-warning p-2 text-dark bg-opacity-25">
 
     <!--banner-->
     <div id="carouselExample" class="carousel slide">
@@ -62,7 +62,7 @@
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100" alt="lights" class="img-fluid">
             <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-3 fw-bold">PCOMING EVENTS</h2>
+              <h2 class="display-3 fw-bold text-black">PCOMING EVENTS</h2>
             </div>
           </div>
 
