--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="/home.html">Home</a>
                   <a class="nav-link" href="/upcomingEvents.html">Upcoming events</a>
                   <a class="nav-link" href="/pastEvents.html">Past Events</a>
-                  <a class="nav-link" href="/contact.html">Contact</a>
+                  <a class="nav-link active" href="/contact.html">Contact</a>
                   <a class="nav-link" href="/stats.html">stats</a>
                 </div>
               </div>
@@ -105,7 +105,7 @@
             <a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/facebook.png" alt="image facebook"></a>
           </div>
           <div class="col-2  fw-bold text-light">
-            <p class="mt-3">COHORT 3</p>
+            <p class="mt-3">COHORT 3 Luis Miguel Macias Toro</p>
           </div>
         </div>
       </div>
