--- a/stats.html
+++ b/stats.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
+    <link rel="shortcut icon" href="/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -73,7 +74,43 @@
           <span class="visually-hidden">Next</span>
         </button>
     </div>
-
+    
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Events with highest % of assistance</td>
+          <td>Events whith lowest % of assistance</td>
+          <td>Events whith larger capacity</td>
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+      </tbody>
+      <thead>
+        <tr>
+          <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Events with highest % of assistance</td>
+          <td>Events whith lowest % of assistance</td>
+          <td>Events whith larger capacity</td>
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+      </tbody>
+    </table>
 
 
     </main>
