--- a/details.html
+++ b/details.html
@@ -6,26 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
     <title>Details</title>
 </head>
 <body>
-    <main>
-        <div class="card mb-3">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <img src="/Recursos_Amazing_Events_Task_1/amazing_brand.png" alt="icono de amazing" class="col-2" >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link " aria-current="page" href="/home.html">Home</a>
+              <a class="nav-link" href="/upcomingEvents.html">Upcoming events</a>
+              <a class="nav-link" href="/pastEvents.html">Past Events</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="/stats.html">stats</a>
             </div>
           </div>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-            <img src="..." class="card-img-bottom" alt="...">
-          </div>
+        </div>
+      </nav>
+  </header>
+    <main class="bg-warning p-2 text-dark bg-opacity-25">
+        <div class="container d-flex justify-content-center bg-black" id="container-2">
+            <div class="card mb-3 align-items-center">
+                <div class="row g-0 align-items-center">
+                  <div class="col-md-8">
+                    <img src="/Recursos_Amazing_Events_Task_1/music_concert.jpg" class="img-fluid rounded-start" alt="music_concert">
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card-body">
+                      <h5 class="card-title">Title</h5>
+                      <p class="card-text">event data...</p>
+                      <p class="card-text">event data...</p>
+                      <p class="card-text">event data...</p>
+                      <p class="card-text">event data...</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        
     </main>
+    <footer>
+      <div class="container-fluid bg-black" data-bs-theme="dark">
+        <div class="row justify-content-between p-2">
+          <div class="col-8">
+            <a href="https://web.whatsapp.com/" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="image whatsapp"></a>
+            <a href="https://www.instagram.com/" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/instagram.png" alt="image instagram"></a>
+            <a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/facebook.png" alt="image facebook"></a>
+          </div>
+          <div class="col-2  fw-bold text-light">
+            <p class="mt-3">COHORT 3 Luis Miguel Macias Toro</p>
+          </div>
+        </div>
+      </div>
+      
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
