se termina pagina stats

--- a/stats.html
+++ b/stats.html
@@ -75,8 +75,8 @@
         </button>
     </div>
     
-    <table class="table">
-      <thead>
+    <table class="table mb-0 mt-5">
+      <thead class="table-dark">
         <tr>
           <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
         </tr>
@@ -88,30 +88,62 @@
           <td>Events whith larger capacity</td>
         </tr>
         <tr>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-        </tr>
-      </tbody>
-      <thead>
-        <tr>
-          <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Events with highest % of assistance</td>
-          <td>Events whith lowest % of assistance</td>
-          <td>Events whith larger capacity</td>
-        </tr>
-        <tr>
-          <td> </td>
-          <td> </td>
-          <td> </td>
+          <td> ..</td>
+          <td> ... </td>
+          <td> ...</td>
         </tr>
       </tbody>
     </table>
 
+    <table class="table mb-0 ">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col" colspan="3" class="text-center"> Upcoming events Statistics by category</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Categories</td>
+          <td>revenues</td>
+          <td>Porcentage of assistance</td>
+        </tr>
+        <tr>
+          <td> ..</td>
+          <td> ... </td>
+          <td> ...</td>
+        </tr>
+        <tr>
+          <td> ..</td>
+          <td> ... </td>
+          <td> ...</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col" colspan="3" class="text-center "> Past events statistics by category</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Categories</td>
+          <td>revenues</td>
+          <td>Porcentage of assistance</td>
+        </tr>
+        <tr>
+          <td> ..</td>
+          <td> ... </td>
+          <td> ...</td>
+        </tr>
+        <tr>
+          <td> ..</td>
+          <td> ... </td>
+          <td> ...</td>
+        </tr>
+      </tbody>
+    </table>
 
     </main>
 
