--- a/stats.html
+++ b/stats.html
@@ -74,77 +74,80 @@
           <span class="visually-hidden">Next</span>
         </button>
     </div>
+    <div class="container">
+      <table class="table mb-0 mt-5 table-bordered border-black">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Events with highest % of assistance</td>
+            <td>Events whith lowest % of assistance</td>
+            <td>Events whith larger capacity</td>
+          </tr>
+          <tr>
+            <td> ..</td>
+            <td> ... </td>
+            <td> ...</td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <table class="table mb-0 table-bordered border-black">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col" colspan="3" class="text-center"> Upcoming events Statistics by category</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Categories</td>
+            <td>revenues</td>
+            <td>Porcentage of assistance</td>
+          </tr>
+          <tr>
+            <td> ..</td>
+            <td> ... </td>
+            <td> ...</td>
+          </tr>
+          <tr>
+            <td> ..</td>
+            <td> ... </td>
+            <td> ...</td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <table class="table table-bordered border-black">
+        <thead class="table-dark ">
+          <tr>
+            <th scope="col" colspan="3" class="text-center "> Past events statistics by category</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Categories</td>
+            <td>revenues</td>
+            <td>Porcentage of assistance</td>
+          </tr>
+          <tr>
+            <td> ..</td>
+            <td> ... </td>
+            <td> ...</td>
+          </tr>
+          <tr>
+            <td> ..</td>
+            <td> ... </td>
+            <td> ...</td>
+          </tr>
+        </tbody>
+      </table>
+  
+    </div>
+
     
-    <table class="table mb-0 mt-5">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col" colspan="3" class="text-center"> Events Statistics</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Events with highest % of assistance</td>
-          <td>Events whith lowest % of assistance</td>
-          <td>Events whith larger capacity</td>
-        </tr>
-        <tr>
-          <td> ..</td>
-          <td> ... </td>
-          <td> ...</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table class="table mb-0 ">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col" colspan="3" class="text-center"> Upcoming events Statistics by category</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Categories</td>
-          <td>revenues</td>
-          <td>Porcentage of assistance</td>
-        </tr>
-        <tr>
-          <td> ..</td>
-          <td> ... </td>
-          <td> ...</td>
-        </tr>
-        <tr>
-          <td> ..</td>
-          <td> ... </td>
-          <td> ...</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table class="table">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col" colspan="3" class="text-center "> Past events statistics by category</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Categories</td>
-          <td>revenues</td>
-          <td>Porcentage of assistance</td>
-        </tr>
-        <tr>
-          <td> ..</td>
-          <td> ... </td>
-          <td> ...</td>
-        </tr>
-        <tr>
-          <td> ..</td>
-          <td> ... </td>
-          <td> ...</td>
-        </tr>
-      </tbody>
-    </table>
-
     </main>
 
 
@@ -159,7 +162,7 @@
             <a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/facebook.png" alt="image facebook"></a>
           </div>
           <div class="col-2  fw-bold text-light">
-            <p class="mt-3">COHORT 3 Luis Miguel Macias Toro</p>
+            <p class="mt-3">COHORT 3</p>
           </div>
         </div>
       </div>
