--- a/details.html
+++ b/details.html
@@ -34,7 +34,7 @@
             <div class="card mb-3 align-items-center">
                 <div class="row g-0 align-items-center">
                   <div class="col-md-8">
-                    <img src="/Recursos_Amazing_Events_Task_1/music_concert.jpg" class="img-fluid rounded-start" alt="music_concert">
+                    <img src="/Recursos_Amazing_Events_Task_1/music_concert.jpg" class="img-fluid " alt="music_concert">
                   </div>
                   <div class="col-md-4">
                     <div class="card-body">
@@ -43,6 +43,7 @@
                       <p class="card-text">event data...</p>
                       <p class="card-text">event data...</p>
                       <p class="card-text">event data...</p>
+                      
                       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                   </div>
