se revisa en el validador

--- a/contact.html
+++ b/contact.html
@@ -40,25 +40,25 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100" alt="chairs" class="img-fluid">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100 img-fluid" alt="chairs">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-3 fw-bold">CONTACT</h2>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100" alt="church" class="img-fluid">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100 img-fluid" alt="church">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-3 fw-bold">CONTACT</h2>
             </div>
           </div>
           <div class="carousel-item active">
-            <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100" alt="lights" class="img-fluid">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100 img-fluid" alt="lights">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-3 fw-bold text-black">CONTACT</h2>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100" alt="microphone" class="img-fluid" >
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100 img-fluid" alt="microphone">
             <div class="carousel-caption d-none d-md-block">
               <h2 class="display-3 fw-bold">CONTACT</h2>
             </div>
