--- a/details.html
+++ b/details.html
@@ -19,17 +19,66 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link " aria-current="page" href="/home.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/home.html">Home</a>
               <a class="nav-link" href="/upcomingEvents.html">Upcoming events</a>
               <a class="nav-link" href="/pastEvents.html">Past Events</a>
+              
               <a class="nav-link" href="/contact.html">Contact</a>
-              <a class="nav-link active" href="/stats.html">stats</a>
+              <a class="nav-link" href="/stats.html">stats</a>
             </div>
           </div>
         </div>
       </nav>
   </header>
     <main class="bg-warning p-2 text-dark bg-opacity-25">
+
+      <div id="carouselExample" class="carousel slide">
+
+        <div class="carousel-inner active">
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="food on table" class="img-fluid">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">DETAILS</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100 img-fluid" alt="chairs">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">DETAILS</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100 img-fluid" alt="church">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">DETAILS</h2>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100 img-fluid" alt="lights">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold text-black">DETAILS</h2>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100 img-fluid" alt="microphone">
+            <div class="carousel-caption d-none d-md-block">
+              <h2 class="display-3 fw-bold">DETAILS</h2>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+
+
+
         <div class="container d-flex justify-content-center bg-black" id="container-2">
             <div class="card mb-3 align-items-center">
                 <div class="row g-0 align-items-center">
