--- a/stats.html
+++ b/stats.html
@@ -36,31 +36,31 @@
         <div class="carousel-inner">
           <div class="carousel-item">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="food on table" class="img-fluid">
-            <div class="carousel-caption d-none d-md-block">
-              <h2 class="display-3 fw-bold">STATS</h2>
+            <div class="carousel-caption  d-md-block">
+              <h2 class="display-3   fw-bold">STATS</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100 img-fluid" alt="chairs">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h2 class="display-3 fw-bold">STATS</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100 img-fluid" alt="church">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold">STATS</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100 img-fluid" alt="lights">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold text-black">STATS</h2>
             </div>
           </div>
           <div class="carousel-item active">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100 img-fluid" alt="microphone">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold">STATS</h2>
             </div>
           </div>
