--- a/details.html
+++ b/details.html
@@ -31,37 +31,36 @@
       </nav>
   </header>
     <main class="bg-warning p-2 text-dark bg-opacity-25">
-
       <div id="carouselExample" class="carousel slide">
 
-        <div class="carousel-inner active">
+        <div class="carousel-inner">
           <div class="carousel-item">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="food on table" class="img-fluid">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold">DETAILS</h2>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item active">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" class="d-block w-100 img-fluid" alt="chairs">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold">DETAILS</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100 img-fluid" alt="church">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h2 class="display-3 fw-bold">DETAILS</h2>
             </div>
           </div>
           <div class="carousel-item ">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100 img-fluid" alt="lights">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h2 class="display-3 fw-bold text-black">DETAILS</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100 img-fluid" alt="microphone">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h2 class="display-3 fw-bold">DETAILS</h2>
             </div>
           </div>
