--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
             <a href="https://web.facebook.com/?locale=es_LA&_rdc=1&_rdr" class="link-underline-primary"><img src="/Recursos_Amazing_Events_Task_1/facebook.png" alt="image facebook"></a>
           </div>
           <div class="col-2  fw-bold text-light">
-            <p class="mt-3">COHORT 3</p>
+            <p class="mt-3">COHORT 3 Luis Macias</p>
           </div>
         </div>
       </div>
