cambios antes del sprint 2

--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -55,21 +55,21 @@
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" class="d-block w-100 img-fluid" alt="church">
             <div class="carousel-caption  d-md-block">
-              <h2 class="display-3 fw-bold">PCOMING EVENTS</h2>
+              <h2 class="display-3 fw-bold">UPCOMING EVENTS</h2>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" class="d-block w-100 img-fluid" alt="lights" >
             <div class="carousel-caption  d-md-block">
-              <h2 class="display-3 fw-bold text-black">PCOMING EVENTS</h2>
+              <h2 class="display-3 fw-bold text-black">UPCOMING EVENTS</h2>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" class="d-block w-100 img-fluid" alt="microphone">
             <div class="carousel-caption  d-md-block">
-              <h2 class="display-3 fw-bold">PCOMING EVENTS</h2>
+              <h2 class="display-3 fw-bold">UPCOMING EVENTS</h2>
             </div>
           </div>
         </div>
