se corrigen errores de tarjetas y botones

--- a/details.html
+++ b/details.html
@@ -78,11 +78,11 @@
 
 
 
-        <div class="container d-flex justify-content-center bg-black" id="container-2">
+        <div class="container-fluid bg-dark" id="container-2">
             <div class="card mb-3 align-items-center">
-                <div class="row g-0 align-items-center">
+                <div class="row  align-items-center">
                   <div class="col-md-8">
-                    <img src="/Recursos_Amazing_Events_Task_1/music_concert.jpg" class="img-fluid " alt="music_concert">
+                    <img src="/Recursos_Amazing_Events_Task_1/music_concert.jpg" class="img-fluid" alt="music_concert">
                   </div>
                   <div class="col-md-4">
                     <div class="card-body">
