--- a/home.html
+++ b/home.html
@@ -120,8 +120,8 @@
           </div>
         <!--tarjetas-->
 
-        <div class="container-fluid ">
-          <div class="row d-flex justify-content-evenly"
+        <div class="container-fluid">
+          <div class="row  justify-content-evenly"
           id="padreTarjeta">
 
           </div>
