--- a/pastEvents.html
+++ b/pastEvents.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-3 my-3">
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="search">
                 <button class="btn btn-outline-success" type="submit">🔎</button>
               </form>
             </div>
