--- a/stats.html
+++ b/stats.html
@@ -86,9 +86,9 @@
         </thead>
         <tbody>
           <tr>
-            <td class="bg-dark text-white">Events with highest % of assistance</td>
-            <td class="bg-dark text-white">Events whith lowest % of assistance</td>
-            <td class="bg-dark text-white">Events whith larger capacity</td>
+            <td class="bg-warning">Events with highest % of assistance</td>
+            <td class="bg-warning">Events whith lowest % of assistance</td>
+            <td class="bg-warning">Events whith larger capacity</td>
           </tr>
           <tr>
             <td id="eventoMayorAsistencia"> </td>
@@ -106,9 +106,9 @@
         </thead>
         <tbody id="tbodyCategory">
           <tr>
-            <td class="bg-dark text-white">Categories</td>
-            <td class="bg-dark text-white">revenues</td>
-            <td class="bg-dark text-white">Porcentage of assistance</td>
+            <td class="bg-warning text-center">Categories</td>
+            <td class="bg-warning text-center">revenues</td>
+            <td class="bg-warning text-center">Porcentage of assistance</td>
           </tr>
          
         </tbody>
@@ -122,9 +122,9 @@
         </thead>
         <tbody id="tbodyCategoryPast">
           <tr >
-            <td class="bg-dark text-white">Categories</td>
-            <td class="bg-dark text-white">revenues</td>
-            <td class="bg-dark text-white">Porcentage of assistance</td>
+            <td class="bg-warning text-center">Categories</td>
+            <td class="bg-warning text-center">revenues</td>
+            <td class="bg-warning text-center">Porcentage of assistance</td>
           </tr>
         </tbody>
       </table>
